@@ -17,10 +17,6 @@ package org.hyperledger.besu.consensus.qbft.core.validation;
 import static org.hyperledger.besu.consensus.common.bft.validation.ValidationHelpers.hasDuplicateAuthors;
 import static org.hyperledger.besu.consensus.common.bft.validation.ValidationHelpers.hasSufficientEntries;
 
-import org.hyperledger.besu.consensus.common.bft.BftBlockHeaderFunctions;
-import org.hyperledger.besu.consensus.common.bft.BftBlockInterface;
-import org.hyperledger.besu.consensus.common.bft.BftContext;
-import org.hyperledger.besu.consensus.common.bft.BftExtraDataCodec;
 import org.hyperledger.besu.consensus.common.bft.ConsensusRoundIdentifier;
 import org.hyperledger.besu.consensus.common.bft.payload.Payload;
 import org.hyperledger.besu.consensus.common.bft.payload.SignedData;
@@ -28,18 +24,20 @@ import org.hyperledger.besu.consensus.qbft.core.messagewrappers.Proposal;
 import org.hyperledger.besu.consensus.qbft.core.payload.PreparePayload;
 import org.hyperledger.besu.consensus.qbft.core.payload.PreparedRoundMetadata;
 import org.hyperledger.besu.consensus.qbft.core.payload.RoundChangePayload;
+import org.hyperledger.besu.consensus.qbft.core.types.QbftBlock;
+import org.hyperledger.besu.consensus.qbft.core.types.QbftBlockInterface;
+import org.hyperledger.besu.consensus.qbft.core.types.QbftBlockValidator;
+import org.hyperledger.besu.consensus.qbft.core.types.QbftContext;
+import org.hyperledger.besu.consensus.qbft.core.types.QbftHashMode;
+import org.hyperledger.besu.consensus.qbft.core.types.QbftProtocolSchedule;
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Hash;
-import org.hyperledger.besu.ethereum.BlockValidator;
 import org.hyperledger.besu.ethereum.ProtocolContext;
-import org.hyperledger.besu.ethereum.core.Block;
-import org.hyperledger.besu.ethereum.mainnet.ProtocolSchedule;
 
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -51,12 +49,11 @@ public class ProposalValidator {
   private static final String ERROR_PREFIX = "Invalid Proposal Payload";
 
   private final ProtocolContext protocolContext;
-  private final ProtocolSchedule protocolSchedule;
+  private final QbftProtocolSchedule protocolSchedule;
   private final int quorumMessageCount;
   private final Collection<Address> validators;
   private final ConsensusRoundIdentifier roundIdentifier;
   private final Address expectedProposer;
-  private final BftExtraDataCodec bftExtraDataCodec;
 
   /**
    * Instantiates a new Proposal validator.
@@ -67,23 +64,20 @@ public class ProposalValidator {
    * @param validators the validators
    * @param roundIdentifier the round identifier
    * @param expectedProposer the expected proposer
-   * @param bftExtraDataCodec the bft extra data codec
    */
   public ProposalValidator(
       final ProtocolContext protocolContext,
-      final ProtocolSchedule protocolSchedule,
+      final QbftProtocolSchedule protocolSchedule,
       final int quorumMessageCount,
       final Collection<Address> validators,
       final ConsensusRoundIdentifier roundIdentifier,
-      final Address expectedProposer,
-      final BftExtraDataCodec bftExtraDataCodec) {
+      final Address expectedProposer) {
     this.protocolContext = protocolContext;
     this.protocolSchedule = protocolSchedule;
     this.quorumMessageCount = quorumMessageCount;
     this.validators = validators;
     this.roundIdentifier = roundIdentifier;
     this.expectedProposer = expectedProposer;
-    this.bftExtraDataCodec = bftExtraDataCodec;
   }
 
   /**
@@ -93,12 +87,11 @@ public class ProposalValidator {
    * @return the boolean
    */
   public boolean validate(final Proposal msg) {
-    final BlockValidator blockValidator =
+    final QbftBlockValidator blockValidator =
         protocolSchedule.getByBlockHeader(msg.getBlock().getHeader()).getBlockValidator();
 
     final ProposalPayloadValidator payloadValidator =
-        new ProposalPayloadValidator(
-            expectedProposer, roundIdentifier, blockValidator, protocolContext);
+        new ProposalPayloadValidator(expectedProposer, roundIdentifier, blockValidator);
 
     if (!payloadValidator.validate(msg.getSignedPayload())) {
       LOG.info("{}: invalid proposal payload in proposal message", ERROR_PREFIX);
@@ -150,13 +143,11 @@ public class ProposalValidator {
         // to create a block with the old round in it, then re-calc expected hash
         // Need to check that if we substitute the LatestPrepareCert round number into the supplied
         // block that we get the SAME hash as PreparedCert.
-        final BftBlockInterface bftBlockInterface =
-            protocolContext.getConsensusContext(BftContext.class).getBlockInterface();
-        final Block currentBlockWithOldRound =
+        final QbftBlockInterface bftBlockInterface =
+            protocolContext.getConsensusContext(QbftContext.class).blockInterface();
+        final QbftBlock currentBlockWithOldRound =
             bftBlockInterface.replaceRoundInBlock(
-                proposal.getBlock(),
-                metadata.getPreparedRound(),
-                BftBlockHeaderFunctions.forCommittedSeal(bftExtraDataCodec));
+                proposal.getBlock(), metadata.getPreparedRound(), QbftHashMode.COMMITTED_SEAL);
 
         final Hash expectedPriorBlockHash = currentBlockWithOldRound.getHash();
 
@@ -190,7 +181,7 @@ public class ProposalValidator {
   }
 
   private boolean validateRoundZeroProposalHasNoRoundChangesOrPrepares(final Proposal proposal) {
-    if ((proposal.getRoundChanges().size() != 0) || proposal.getPrepares().size() != 0) {
+    if ((!proposal.getRoundChanges().isEmpty()) || !proposal.getPrepares().isEmpty()) {
       LOG.info("{}: round-0 proposal must not contain any prepares or roundchanges", ERROR_PREFIX);
       return false;
     }
@@ -292,12 +283,10 @@ public class ProposalValidator {
             .filter(Optional::isPresent)
             .map(Optional::get)
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
 
     final List<Integer> preparedRounds =
-        distinctMetadatas.stream()
-            .map(PreparedRoundMetadata::getPreparedRound)
-            .collect(Collectors.toList());
+        distinctMetadatas.stream().map(PreparedRoundMetadata::getPreparedRound).toList();
 
     for (final Integer preparedRound : preparedRounds) {
       if (distinctMetadatas.stream().filter(dm -> dm.getPreparedRound() == preparedRound).count()
